# crust

./: .travis.yml  Cargo.toml  README.md
scripts/: disass.py
src/: buzzer.rs  context.rs  cpu.rs  decoder.rs  display.rs  keyboard.rs  lib.rs  main.rs  renderer.rs  rom.rs  tools.rs
src/disassembler/: main.rs  reader.rs
