[package]
name = "chip-8"
version = "0.1.0"
authors = ["Pierre Wacrenier <pierre@wacrenier.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "~0.32"
clap = "~2.27.0"
hexdump = "*"

[dev-dependencies]
tempfile = "*"
